# diff-gaussian-rasterization

./: rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  compile.sh  forward.cu  forward.h  optix.cu  optix.ptx  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff_gaussian_rasterization/: __init__.py
tests/: CMakeLists.txt  forward_test.cu
